--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="colorPrimary">#39CBDD</color>
     <color name="colorDark">#072428</color>
     <color name="colorDarkV2">#2A645E</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="red_200">#ff7961</color>
+    <color name="red_500">#f44336</color>
+    <color name="red_700">#ba000d</color>
+    <color name="yellow_300">#FFD600</color>
+    <color name="yellow_700">#FF6D00</color>
+    <color name="colorPrimary">#fb8c00</color>
+    <color name="colorPrimaryDark">#c25e00</color>
+    <color name="colorAccent">#ffc947</color>
+    <color name="blue">#039BE5</color>
+    <color name="red">#E53935</color>
 </resources>
